[package]

name = "ilog2"
version = "0.0.1"
authors = [ "Keunhong Lee <dlrmsghd@gmail.com>" ]

homepage = "https://github.com/ANLAB-KAIST/rust-ilog2"
repository = "https://github.com/ANLAB-KAIST/rust-ilog2"
documentation = "https://github.com/ANLAB-KAIST/rust-ilog2"
license = "MIT"
keywords = ["integer", "logarithm", "ilog2", "bitops"]

description = """
Integer logarithm library including some bit operations.
"""

